# ros2_tmplt_launch_bringup

./: CMakeLists.txt  package.xml
config/: activite6.yaml  readme.txt
launch/: activite6.launch.xml  app.launch.py  app.launch.xml
